--- a/app/src/main/res/layout/fragment_nuevalarma.xml
+++ b/app/src/main/res/layout/fragment_nuevalarma.xml
@@ -143,16 +143,51 @@
             android:layout_alignRight="@+id/linearLayout"
             android:layout_alignEnd="@+id/linearLayout" />
 
+        <LinearLayout
+            android:id="@+id/marco"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/checkBox"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+
+            <ImageView
+                android:layout_width="60dp  "
+                android:layout_height="60dp"
+                android:layout_weight="0"
+                android:src="@drawable/ubi"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Lugar"
+                android:background="@color/color1"
+                android:textColor="@color/color2"
+                android:id="@+id/lugar"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center"
+
+                />
+        </LinearLayout>
+
+
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/checkBox"
+            android:layout_below="@id/marco"
             android:layout_centerHorizontal="true"
             android:text="Guardar"
             android:background="@color/color7"
             android:textColor="@color/color2"
             android:id="@+id/guardarnue"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="10dp"
             />
 
 
