--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color6">#A7A7A7</color>
     <color name="color7">#D22D21</color>
     <color name="color8">#ff3333</color>
+    <color name="color9">#ffad33</color>
 
 
 
